INTERNAL-65: Quick fixes

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/clp_fallback.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/clp_fallback.phtml
@@ -22,7 +22,7 @@ use Satoshi\Theme\Block\Template;
   </div>
 
   <article
-    aria-label="<?= $escaper->escapeHtmlAttr(__('Category details')) ?>"
+    aria-label="<?= __('Category details') ?>"
     class="content-wrapper mx-auto flex flex-col items-start gap-3 py-5 pb-6 pt-3"
   >
     <template x-if="$store['transition'].pageData?.img">
