--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
@@ -25,42 +25,48 @@ $product = $block->getProduct();
 
 
 <?php if ($attributes = $block->getAdditionalData()): ?>
-    <div x-data="Accordion('true', 300)">
-        <div
-            class="align-start animate-on-transition flex flex-col"
+    <div class="align-start animate-on-transition mb-8 flex flex-col px-4 md:p-0" x-data="Accordion('true', 300)">
+        <button
+            class="group flex items-center justify-between"
+            x-ref="AccordionButton"
+            type="button"
+            :aria-expanded="isExpanded"
+            aria-controls="attributes_panel"
+            aria-labelledby="attributes_label"
         >
-            <button class="flex items-center justify-between"
-                    type="button"
-                    x-ref="AccordionButton"
-                    :aria-expanded="isExpanded"
-                    aria-controls="attributes_panel"
-                    aria-labelledby="attributes_label">
-                <p class="text-base font-semibold leading-tight text-text-500">
-                    <?= $block->getTitle() ? $escaper->escapeHtml($block->getTitle()) : '&nbsp;' ?>
-                </p>
-                <span x-ref="AccordionIcon" class="button button--outline-secondary icon-button icon-button--size-xs">
+            <p class="text-base font-semibold leading-tight text-text-500">
+                <?= $block->getTitle() ? $escaper->escapeHtml($block->getTitle()) : '&nbsp;' ?>
+            </p>
+            <span x-ref="AccordionIcon" class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable">
                 <?= $hyvaicons->renderHtml('chevron-up', 'rotate-180'); ?>
             </span>
-            </button>
-        </div>
-        <div x-ref="AccordionPanel"
-             :inert="!isExpanded"
-             class="overflow-hidden"
-             x-cloak
-             id="attributes_panel"
-             role="region"
-             aria-labelledby="attributes_label">
-            <div class="mt-3 overflow-hidden text-text-100 contrast-more:text-secondary-700">
+        </button>
+        <div
+            x-ref="AccordionPanel"
+            :inert="!isExpanded"
+            role="region"
+            class="overflow-hidden"
+            id="attributes_panel"
+            aria-labelledby="attributes_label"
+            x-cloak
+        >
+            <div class="mt-3 overflow-hidden">
                 <div class="table-wrapper max-w-prose overflow-x-auto" id="product-attributes">
                     <table class="additional-attributes w-full">
                         <?php foreach ($attributes as $attribute): ?>
                             <tr class="border-b border-gray-300 last:border-b-0">
-                                <th class="col label w-1/2 py-2 text-left text-gray-700 font-normal product-attribute-label"
-                                    scope="row"><?= $escaper->escapeHtml($attribute['label']) ?></th>
-                                <td class="col data w-1/2 py-2 pl-2 text-left text-gray-900 product-attribute-value"
+                                <th
+                                    class="col label w-1/2 py-2 text-left text-gray-700 font-normal product-attribute-label"
+                                    scope="row"
+                                >
+                                    <?= $escaper->escapeHtml($attribute['label']) ?>
+                                </th>
+                                <td
+                                    class="col data w-1/2 py-2 pl-2 text-left text-gray-900 product-attribute-value"
                                     data-th="<?= $escaper->escapeHtmlAttr($attribute['label']) ?>"
-                                ><?= /* @noEscape */
-                                    $catalogOutputHelper->productAttribute($product, $attribute['value'], $attribute['code']) ?></td>
+                                >
+                                    <?= /* @noEscape */ $catalogOutputHelper->productAttribute($product, $attribute['value'], $attribute['code']) ?>
+                                </td>
                             </tr>
                         <?php endforeach; ?>
                     </table>
