--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
@@ -114,13 +114,6 @@ if ($product) {
                                 class="mix-blend-darken object-center max-h-full md:group-hover:scale-105 <?= $isContain ? 'object-contain rounded-md p-[2%]' : 'object-cover h-full w-full' ?>"
                                 src="<?= $escaper->escapeUrl($imageUrl) ?>"
                                 alt="<?= $escaper->escapeHtmlAttr($product->getName()) ?>" loading="lazy">
-                            <?=
-                            $template
-                                ->setData([
-                                    'product' => $product,
-                                ])
-                                ->render('Magento_Catalog::/product/list/discount-badge.phtml')
-                            ?>
                         </div>
                     <?php else: ?>
                         <div
@@ -144,7 +137,7 @@ if ($product) {
                         </div>
                     </template>
                 <?php endif ?>
-                <!-- TODO: Render discount badge -->
+                <?= $template->setData(['product' => $product])->render('Magento_Catalog::/product/list/discount-badge.phtml') ?>
             </div>
 
             <div class="relative flex flex-1 flex-col">
