--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/slider/product-slider-container.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/slider/product-slider-container.phtml
@@ -65,7 +65,7 @@ echo $template
     ->setData([
         'slides' => $slidesHtml,
         'gap' => 16,
-        'slides_amount_in_view' => '{xs: 1, sm: 2, md: 3, lg: 4, xl: 5, xxl: 6}',
+        'slides_amount_in_view' => ['xs' => 1, 'sm' => 2, 'md' => 3, 'lg' => 4, 'xl' => 5, 'xxl' => 6],
         'title' => $title,
         'id' => $name,
         'is_full_page' => true,
